--- a/app/views/water/current/reference-number.html
+++ b/app/views/water/current/reference-number.html
@@ -1,9 +1,19 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Check all your answers
+  Confirmation of submitted details
 {% endblock %}
 
+{% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
+{% endblock %}
 {% block content %}
 
 <div class="govuk-grid-row">
@@ -13,44 +23,50 @@
         Details submitted
        </h1>
     <div class="govuk-panel__body">
-      Your reference number<br><strong>WMAA54X</strong>
+      Your reference number<br><strong>WM-VMA-A54</strong>
     </div>
    </div>
-    <br>
-    <div class="govuk-body govuk-!-padding-top-7">
-      <p>You will get an email with a record of your answers.</p>
+
+
+      <p class="govuk-body">We have sent you a confirmation email with a record of your answers.  </p>
       <p>If you do not get an email within 72 hours, please call the RPA helpline and follow the options for the Farming Transformation Fund scheme:</p>
-      <p class="govuk-body govuk-!-font-weight-bold">Telephone: 03000 200 301</p>
-      <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
-      <a href="#" class="govuk-link">Find out about call charges</a>
-      <p class="govuk-!-padding-top-5">Email :<a href="#" class="govuk-link">FTF@rpa.gov.uk </a></p> 
-      <p class="govuk-!-padding-top-3">RPA will be in touch when the full application period opens.
-      They'll tell you about the application form and any guidance you need to submit a full application.
-      </p>
-    </div>
-    <br>
-    <br>
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text govuk-!-font-size-24">
-        <span class="govuk-warning-text__assistive">You must not start the project</span>
-        You must not start the project<br><br>
-      </strong>
-      <p>Starting the project or committing to any costs (such as placing orders)<br>
-      before you recieve a funding agreement will invalidate your application.</p>
+      <h2 class="govuk-heading-m">RPA helpline</h2>
+
+      <h3 class="govuk-heading-s">Telephone</h3>
+
+      <ul class="govuk-list">
+  <li>Telephone: 03000 200 301</li>
+  <li>Monday to Friday, 9am to 5pm (except public holidays)</li>
+</ul>
+<p class="govuk-body">
+  <a class="govuk-link" href="#">Find out about call charges</a>
+</p>
+
+<h3 class="govuk-heading-s">Email</h3>
+
+<ul class="govuk-list">
+  <li><a class="govuk-link" href="#">FTF@rpa.gov.uk</a></li>
+
+</ul>
+
+<p class="govuk-heading-m">What happens next</p>
+<ol class="govuk-list govuk-list--number govuk-list--spaced">
+  <li>RPA will be in touch when the full application period opens. They will tell you if your project scored well enough to get the full application form. </li>
+  <li>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects. </li>
+  <li>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</li>
+</ol>
+
+{{ govukWarningText({
+    text: 'You must not start the project',
+    iconFallbackText: 'Warning'
+}) }}
+
+<p>Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement will invalidate your application.</p>
       <p class="govuk-body">Before you start the project, you can:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>get quotes from suppliers</li>
           <li>apply for planning permission or an abstraction licence</li>
         </ul>
-      <div class="govuk-body">  
-      <p><span class="govuk-body govuk-!-font-weight-bold">You will not automatically get a grant.</span>
-       The grant is expected to be highly competitive and you are competing against other projects.</p>
-       <br><br>
-       <a href="#" class="govuk-link">What do you think of this service?</a>
-      </div>
-    </div>
-  </div>
-</div>
+      <p><a href="#" class="govuk-link">What do you think of this service?</a></p>
 
 {% endblock %}
