--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -33,7 +33,7 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
                             <p class='govuk-list app-list--definition'>
-                              <a href='water/current/guidance' class="govuk-link--no-visited-state"><strong>R2: version 1 (current)</a></strong><br>
+                              <a href='water/current/guidance' class="govuk-link--no-visited-state"><strong>Round 2: version 1 (current)</a></strong><br>
                               This version was not tested yet and <a href='https://eaflood.atlassian.net/browse/GRANTS-856' target="new" class="govuk-link--no-visited-state">includes prototype tickets from Jira</a>.<br>
                                 <span class="govuk-body govuk-!-font-size-14"># Last updated on 12 September 2022<br/>
                                 </span></p>
@@ -41,31 +41,33 @@
                                 <p class='govuk-heading-m'>Previous versions</p>
 
                                 <p class='govuk-list app-list--definition'>
-                                  <a href='/water/v8public/guidance' class="govuk-link--no-visited-state">Version 8 (public beta)</a><br>
-                                        Last version that was tested with users. Recently updated in line with live version. Published: 6 October 2022</p>
+                                  <a href='/water/v8public/guidance' class="govuk-link--no-visited-state">Round 1: version 8 (public beta)</a><br>
+                                        This is in line with Round 1 live version, and it was tested with users.<br>
+                                        <span class="govuk-body govuk-!-font-size-14"># Last updated on 6 October 2022<br/>
+
                                 <p class='govuk-list app-list--definition'>
-                                    <a href='/water/v7private/guidance-all-grants' class="govuk-link--no-visited-state">Version 7 (private beta)</a><br>
+                                    <a href='/water/v7private/guidance-all-grants' class="govuk-link--no-visited-state">Round 1: version 7 (private beta)</a><br>
                                         This version was tested with internal users.</p>
                                 <p class='govuk-list app-list--definition'>
-                                    <a href='/water/v6/guidance-all-grants' class="govuk-link--no-visited-state">Version 6</a><br>
+                                    <a href='/water/v6/guidance-all-grants' class="govuk-link--no-visited-state">Round 1: version 6</a><br>
                                         Alpha extension</p>
                                 <p class='govuk-list app-list--definition'>
-                                    <a href='/water/v5/guidance-all-grants' class="govuk-link--no-visited-state">Version 5</a><br>
+                                    <a href='/water/v5/guidance-all-grants' class="govuk-link--no-visited-state">Round 1: version 5</a><br>
                                         Alpha extension</p>
                                 <p class='govuk-list app-list--definition'>
-                                    <a href='/water/v4b/guidance-all-grants' class="govuk-link--no-visited-state">Version 4 (beta phase)</a><br>
+                                    <a href='/water/v4b/guidance-all-grants' class="govuk-link--no-visited-state">Round 1: version 4 (beta phase)</a><br>
                                         Alpha extension</p>
                                 <p class='govuk-list app-list--definition'>
-                                    <a href='/water/v4/guidance-all-grants' class="govuk-link--no-visited-state">Version 4</a><br>
+                                    <a href='/water/v4/guidance-all-grants' class="govuk-link--no-visited-state">Round 1: version 4</a><br>
                                         Alpha sprint XXXX - large grants expression of interest v3</p>
                                 <p class='govuk-list app-list--definition'>
-                                    <a href='/water/v3/guidance-all-grants' class="govuk-link--no-visited-state">Version 3</a><br>
+                                    <a href='/water/v3/guidance-all-grants' class="govuk-link--no-visited-state">Round 1: version 3</a><br>
                                     Alpha sprint 6 - large grants expression of interest v2</p>
                                 <p class='govuk-list app-list--definition'>
-                                    <a href='/water/v2/start' class="govuk-link--no-visited-state">Version 2</a><br>
+                                    <a href='/water/v2/start' class="govuk-link--no-visited-state">Round 1: version 2</a><br>
                                     Alpha sprint 5 - large grants expression of interest</p>
                                 <p class='govuk-list app-list--definition'>
-                                    <a href='/water/v1/guidance-2019' class="govuk-link--no-visited-state">Version 1</a><br>
+                                    <a href='/water/v1/guidance-2019' class="govuk-link--no-visited-state">Round 1: version 1</a><br>
                                     Alpha sprint 3 - small grants service</p>
 
 
