--- a/app/views/water/current/collaboration.html
+++ b/app/views/water/current/collaboration.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -40,18 +48,16 @@
             </div>
           </fieldset>
         </div>
-        
+
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Get your score
         </button>
-
-
-
       </form>
     </div>
+
     <div class="govuk-grid-column-one-third ">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m">Funding  priorities</h3>
+        <h3 class="govuk-heading-s">Funding  priorities</h3>
         <div class="govuk-body govuk-!-font-size-19">
             RPA wants to fund projects that:
                    <ul>
