--- a/app/views/water/current/current-irrigating.html
+++ b/app/views/water/current/current-irrigating.html
@@ -5,11 +5,19 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
-<main class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -21,7 +29,7 @@
               </h1>
             </legend>
             <br>
-            <div class="govuk-radios govuk-!-margin-top-4" data-module="govuk-radios">
+            <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios govuk-radios--inline">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="current-irrigating-1" name="current-irrigating" type="radio"  value="Yes" {{ checked("current-irrigating", "Yes") }}>
@@ -37,19 +45,14 @@
               </div>
             </div>
           </fieldset>
-        <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-9" data-module="govuk-button">
+          <br>
+        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
 
-        {% if data['COMPLETED'] == true %}
-          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
-          >
-            Back to summary page
-          </button>
-        {% endif %}
+        
       </form>
     </div>
   </div>
-</main>
+
 {% endblock %}
