--- a/app/views/water/current/irrigated-land-no.html
+++ b/app/views/water/current/irrigated-land-no.html
@@ -5,11 +5,19 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
-<main class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -28,32 +36,32 @@
                   <input class="govuk-input govuk-input--width-5" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
                     <div class="govuk-input__suffix" aria-hidden="true">ha</div>
                 </div>
-                 
-              <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">
+
+              <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                 Continue
               </button>
 
               {% if data['COMPLETED'] == true %}
                 <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-                  class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
+                  class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button"
                 >
-                  Back to summary page
+                  Back to score
                 </button>
               {% endif %}
-            </div>   
-        </form>                     
-    </div> 
-    <div class="govuk-grid-column-one-third govuk-!-padding-5">
+            </div>
+        </form>
+    </div>
+    <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-            RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+            RPA wants to fund projects that:
                    <ul>
                       <li>improve productivity</li>
                    </ul>
-        </div>         
-      </aside>   
+        </div>
+      </aside>
   </div>
-</main>  
+
 
 {% endblock %}
