--- a/app/views/water/current/irrigation-systems-no.html
+++ b/app/views/water/current/irrigation-systems-no.html
@@ -5,25 +5,33 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
-<mian class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-        <div class="govuk-form-group">
+
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-padding-top-2">
               <h1 class="govuk-fieldset__heading">
                 What systems will be used to irrigate?
               </h1>
             </legend>
-          </fieldset>
-        </div>
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
+
+
+
+
             <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-1">
                <span class="govuk-caption-m">Select one or two options</span>
               <br>
@@ -71,34 +79,34 @@
                   </label>
                 </div>
               </div>
-            </div>  
+            </div>
           </fieldset>
-        </div>
-        <br>
+
+<br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
 
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button"
           >
-            Back to summary page
+            Back to score
           </button>
         {% endif %}
       </form>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-padding-5">
+    <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-            RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+            RPA wants to fund projects that:
               <ul>
                 <li>improve the environment</li>
                 <li>improve water sustainability</li>
                </ul>
-        </div>         
-      </aside>   
+        </div>
+      </aside>
     </div>
-</main>
+
 {% endblock %}
