--- a/app/views/water/current/irrigation-water-source-no.html
+++ b/app/views/water/current/irrigation-water-source-no.html
@@ -5,12 +5,20 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
 
-<main class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -30,31 +38,31 @@
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-1" name="irrigation-target" type="checkbox" value="Peak flow" {{ checked("irrigation-target", "Peak flow") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-1" name="irrigation-target-no" type="checkbox" value="Peak flow" {{ checked("irrigation-target-no", "Peak flow") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-1">
                   Peak-flow surface water
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-2" name="irrigation-target" type="checkbox" value="Bore hole" {{ checked("irrigation-target", "Bore hole") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-2" name="irrigation-target-no" type="checkbox" value="Bore hole" {{ checked("irrigation-target-no", "Bore hole") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-2">
                   Bore hole/aquifer
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-3" name="irrigation-target" type="checkbox" value="Rain water harvesting" {{ checked("irrigation-target", "Rain water harvesting") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-3" name="irrigation-target-no" type="checkbox" value="Rain water harvesting" {{ checked("irrigation-target-no", "Rain water harvesting") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-3">
                   Rain water harvesting
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-4" name="irrigation-target" type="checkbox" value="Surface abstraction" {{ checked("irrigation-target", "Surface abstraction") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-4" name="irrigation-target-no" type="checkbox" value="Surface abstraction" {{ checked("irrigation-target-no", "Surface abstraction") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-4">
                   Summer water surface abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-5" name="irrigation-target" type="checkbox" value="mains" {{ checked("irrigation-target", "mains") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-5" name="irrigation-target-no" type="checkbox" value="mains" {{ checked("irrigation-target-no", "mains") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-5">
                   Mains
                 </label>
@@ -69,33 +77,33 @@
 
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button"
           >
-            Back to summary page
+            Back to score
           </button>
         {% endif %}
 
       </form>
   </div>
-  <div class="govuk-grid-column-one-third govuk-!-padding-5">
+  <div class="govuk-grid-column-one-third ">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-            RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+            RPA wants to fund projects that:
                    <ul>
                     <li>improve the environment</li>
                     <li>improve water sustainability</li>
                    </ul>
 
-            RPA will not fund projects where water is supplied by:    
+            RPA will not fund projects where water is supplied by:
             <ul>
               <li>summer water surface abstraction</li>
               <li>mains</li>
-            </ul> 
-        </div>         
-      </aside>   
+            </ul>
+        </div>
+      </aside>
   </div>
   </div>
-</main>  
+
 
 {% endblock %}
