--- a/app/views/water/current/legal-status-fail.html
+++ b/app/views/water/current/legal-status-fail.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="legal-status">Back</a>
 {% endblock %}
 
@@ -17,25 +25,40 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This is only open to a business with a legal status of:</p>
+      <p class="govuk-body">Your business does not have an eligible legal status.</p>
+        <details class="govuk-details" data-module="govuk-details">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              Who is eligible
+            </span>
+          </summary>
+          <div class="govuk-details__text">
+            <ul class="govuk-list govuk-list--bullet">
+              <li>Sole trader</li>
+              <li>Partnership</li>
+              <li>Limited company</li>
+              <li>Charity</li>
+              <li>Trust</li>
+              <li>Limited liability partnership</li>
+              <li>Community interest company</li>
+              <li>Limited partnership</li>
+              <li>Industrial and provident society</li>
+              <li>Co-operative society (Co-Op)</li>
+              <li>Community benefit society (BenCom)</li>
+            </ul>
 
-        <ul class="govuk-list govuk-list--bullet">
-          <li>Sole trader</li>
-          <li>Partnership</li>
-          <li>Limited company</li>
-          <li>Charity</li>
-          <li>Trust</li>
-          <li>Limited liability partnership</li>
-          <li>Community interest company</li>
-          <li>Limited partnership</li>
-          <li>Industrial and provident society</li>
-          <li>Co-operative society (Co-Op)</li>
-          <li>Community benefit society (BenCom)</li>
-        </ul>
 
-      <p>Other types of business may be supported in future schemes.</p>
+            </div>
+        </details>
 
-      <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
+        <!--Nunjucks warning-->
+        {{ govukWarningText({
+            text: 'Other types of business may be supported in future schemes.',
+            iconFallbackText: 'Warning'
+        }) }}
+
+
+    <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a><p>
 
     </div>
   </div>
