--- a/app/views/water/current/planning-permission-fail.html
+++ b/app/views/water/current/planning-permission-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You cannot apply for a grant from this scheme 
+  You cannot apply for a grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,10 +14,12 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You cannot apply for a grant from this scheme 
+        You cannot apply for a grant from this scheme
       </h1>
-      
-      <p>Any planning permission must be in place by 31 December 2021 (the end of the application window). </p>
+
+      <p>Any planning permission must be in place by 31 December 2022 (the end of the application window). </p>
+      <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-body"> See other grants you may be eligible for.</a>
+    </p>
 
     </div>
   </div>
