--- a/app/views/water/current/planning-required-condition.html
+++ b/app/views/water/current/planning-required-condition.html
@@ -5,6 +5,15 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
+  
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -16,15 +25,15 @@
         <h1 class="govuk-heading-l">
           You may be able to apply for a grant from this scheme
         </h1>
-      
-        <p>Any planning permission must be in place by 31 December 2021 (the end of the application window).</p>
+
+        <p>Any planning permission must be in place by 31 December 2022.</p>
 
             <form class="form" action="{{ nextUrl }}" method="post">
 
               <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
 
             </form>
-       </div>      
+       </div>
     </div>
   </div>
 
