--- a/app/views/water/current/project-cost.html
+++ b/app/views/water/current/project-cost.html
@@ -27,13 +27,15 @@
           <h1 class="govuk-heading-l">What is the estimated cost of the items?</h1>
           <div class="govuk-hint">
             You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £35,000 (40% of £87,500).
-The maximum grant is £500,000.
+The maximum grant is £500,000.<br><br>
+Do not include VAT
+
           </div>
 
           <span class="govuk-caption-m">Enter amount, for example 95,000</span>
           <div class="govuk-input__wrapper govuk-!-margin-top-4">
           <span  class="govuk-input__prefix" aria-hidden="true">£</span>
-          <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
+          <input class="govuk-input govuk-!-width-one-quarter" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
 
           </div>
         </div>
