--- a/app/views/water/current/tenancy-length-condition.html
+++ b/app/views/water/current/tenancy-length-condition.html
@@ -5,6 +5,15 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
+
   <a class="govuk-back-link govuk-!-margin-top-6" href="tenancy-length">Back</a>
 {% endblock %}
 
@@ -13,22 +22,14 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l govuk-!-padding-bottom-5">
+      <h1 class="govuk-heading-l">
         You may be able to apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-!-margin-bottom-9">You will need to extend your tenancy agreement before you can complete a full application.</p>
+      <p class="govuk-body">You will need to extend your tenancy agreement before you can complete a full application.</p>
 
       <form id="mainForm" class="form" action="project-items" method="post">
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
-        {% if data['COMPLETED'] == true %}
-          <button onclick="document.getElementById('mainForm').action='answers'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
-          >
-            Back to summary page
-          </button>
-        {% endif %}
-
 
       </form>
 
