--- a/app/views/water/current/tenancy-length.html
+++ b/app/views/water/current/tenancy-length.html
@@ -5,6 +5,15 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
+
   <a class="govuk-back-link" href="tenancy">Back</a>
 {% endblock %}
 
@@ -39,21 +48,15 @@
             </div>
           </fieldset>
         </div>
-        <br>
+        
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
-        {% if data['COMPLETED'] == true %}
-          <button onclick="document.getElementById('mainForm').action='tenancy-length-answer-completed'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
-          >
-            Back to summary page
-          </button>
-        {% endif %}
+
       </form>
     </div>
   <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-          <h3 class="govuk-heading-m"> Eligibility </h3>
+          <h3 class="govuk-heading-s"> Eligibility </h3>
           <p>You must own the land or have a tenancy in place for 5 years after the final grant payment.</p>
       </aside>
   </div>
