--- a/app/views/water/v8public/planning-permission-fail.html
+++ b/app/views/water/v8public/planning-permission-fail.html
@@ -18,6 +18,8 @@
       </h1>
 
       <p>Any planning permission must be in place by 31 December 2022 (the end of the application window). </p>
+      <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-body"> See other grants you may be eligible for.</a>
+    </p>
 
     </div>
   </div>
