--- a/app/views/water/current/planning-permission.html
+++ b/app/views/water/current/planning-permission.html
@@ -66,7 +66,8 @@
     <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
           <h3 class="govuk-heading-s"> Eligibility </h3>
-          <p>Any planning permission must be in place by 31 December 2022 (the end of the application window).</p>
+          <p class="govuk-body">You must have secured planning permission before you submit a full application.<br><br>
+          Any planning permission must be in place by 31 January 2024.</p>
       </aside>
     </div>
   </div>
