--- a/app/views/water/current/planning-required-condition.html
+++ b/app/views/water/current/planning-required-condition.html
@@ -13,7 +13,7 @@
     },
       html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
-  
+
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -26,7 +26,7 @@
           You may be able to apply for a grant from this scheme
         </h1>
 
-        <p>Any planning permission must be in place by 31 December 2022.</p>
+        <p>Any planning permission must be in place by 31 January 2024 (the end of the application window).</p>
 
             <form class="form" action="{{ nextUrl }}" method="post">
 
