GRANTS-905, GRANTS-904, GRANTS-1168

--- a/app/views/water/current/agent-details.html
+++ b/app/views/water/current/agent-details.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Your details
+  Agent's details
 {% endblock %}
 
 {% block beforeContent %}
@@ -11,10 +11,11 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
       <form class="form" id="mainForm" action="{{ nextUrl }}" method="post">
         <h1 class="govuk-heading-l"> Agent's details</h1>
-        <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Name</h2>
+        <div id="agent-hint" class="govuk-hint govuk-!-padding-bottom-2">Enter the agent and agent business details
+          </div>
+        <h2 class="govuk-heading-m">Name</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="agent-firstname">
             First name
