--- a/app/views/water/current/farmer-details.html
+++ b/app/views/water/current/farmer-details.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Your details
+  Applicant's details
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,8 @@
 
       <form class="form" id="mainForm" action="{{ nextUrl }}" method="post">
         <h1 class="govuk-heading-l"> Applicant's details</h1>
-        <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Name</h2>
+        <div id="applicant-hint" class="govuk-hint govuk-!-padding-bottom-2">Enter farmer and farm business details</div>
+        <h2 class="govuk-heading-m">Name</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-firstname">
             First name
