--- a/app/views/slurrystorage/current/agent-details.html
+++ b/app/views/slurrystorage/current/agent-details.html
@@ -1,29 +1,21 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Agent details
+  Agent's details
 {% endblock %}
 
 {% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
-  }) }}
-
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
       <form class="form" id="mainForm" action="{{ nextUrl }}" method="post">
-        <h1 class="govuk-heading-l"> Agent’s details</h1>
-        <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Name</h2>
+        <h1 class="govuk-heading-l"> Agent's details</h1>
+        <div id="agent-hint" class="govuk-hint govuk-!-padding-bottom-2">Enter the agent and agent business details
+          </div>
+        <h2 class="govuk-heading-m">Name</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="agent-firstname">
             First name
@@ -39,10 +31,10 @@
         </div>
 
         <div class="govuk-form-group">
-          <label class="govuk-label" for="agent-business">
+          <label class="govuk-label" for="business-name">
             Business name
           </label>
-          <input class="govuk-input govuk-!-width-one-half" id="agent-business" name="agent-business" type="text" spellcheck="false" autocomplete="name" value="{{ data['agent-business'] }}">
+          <input class="govuk-input govuk-!-width-one-half" id="business-name" name="business-name" type="text" spellcheck="false" autocomplete="business-name" value="{{ data['business-name'] }}">
         </div>
 
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Contact details</h2>
@@ -55,12 +47,18 @@
           </label>
           <input class="govuk-input  govuk-!-width-two-thirds" id="agent-email" name="agent-email" type="agent-email" spellcheck="false" aria-describedby="agent-email-hint" autocomplete="agent-email" value="{{ data['agent-email'] }}">
         </div>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="confirm-farmer-email">
+              Confirm email address
+          </label>
+          <input class="govuk-input  govuk-!-width-two-thirds" id="confirm-farmer-email" name="confirm-farmer-email" type="confirm-farmer-email" spellcheck="false"  value="{{ data['confirm-agent-email'] }}">
+        </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="agent-landline">
-              Mobile number
+              Mobile phone number
           </label>
-          <div id="landline-name-hint" class="govuk-hint">
+          <div id="farmer-landline-hint" class="govuk-hint">
               We will only use this to contact you about your application
           </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="agent-landline" name="agent-landline" type="agent-landline" spellcheck="false" aria-describedby="agent-landline-hint" autocomplete="agent-landline" value="{{ data['agent-landline'] }}">
@@ -70,7 +68,7 @@
           <label class="govuk-label" for="agent-mobile">
               Landline number
           </label>
-          <div id="landline-name-hint" class="govuk-hint">
+          <div id="farmer-mobile-hint" class="govuk-hint">
               We will only use this to contact you about your application
           </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="agent-mobile" name="agent-mobile" type="agent-mobile" spellcheck="false" aria-describedby="agent-mobile-hint" autocomplete="agent-mobile" value="{{ data['agent-mobile'] }}">
@@ -86,14 +84,14 @@
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="agent-address2">
-              Address line 2 (optional)
+                Address line 2 (optional)
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="agent-address2" name="agent-address2" type="agent-address2" spellcheck="false" aria-describedby="agent-address2-hint" autocomplete="agent-address2" value="{{ data['agent-address2'] }}">
         </div>
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="agent-town">
-                Town or city
+                Town
             </label>
             <input class="govuk-input govuk-!-width-one-half" id="agent-town" name="agent-town" type="agent-town" spellcheck="false" aria-describedby="agent-town-hint" autocomplete="agent-town" value="{{ data['agent-town'] }}">
         </div>
@@ -105,24 +103,24 @@
             <input class="govuk-input govuk-!-width-one-half" id="agent-county" name="agent-county" type="agent-county" spellcheck="false" aria-describedby="agent-county-hint" autocomplete="agent-county" value="{{ data['agent-county'] }}">
         </div>
 
-        <div class="govuk-form-group govuk-!-padding-bottom-8">
+        <div class="govuk-form-group ">
             <label class="govuk-label" for="agent-postcode">
                 Postcode
             </label>
             <input class="govuk-input govuk-!-width-one-quarter" id="agent-postcode" name="agent-postcode" type="agent-postcode" spellcheck="false" aria-describedby="agent-postcode-hint" autocomplete="agent-postcode" value="{{ data['agent-postcode'] }}">
         </div>
 
-        <button class="govuk-button govuk-!-margin-top-6 govuk-!-margin-right-1" data-module="govuk-button">
+        <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
-
         {% if data['DETAILS'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ detailsUrl }}'"
-            class="govuk-button govuk-button--secondary govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
+            class="govuk-button govuk-button--secondary " data-module="govuk-button"
           >
             Back to details
           </button>
         {% endif %}
+
       </form>
     </div>
   </div>
