--- a/app/views/slurrystorage/current/applicant-details.html
+++ b/app/views/slurrystorage/current/applicant-details.html
@@ -1,19 +1,10 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Your details
+  Applicant's details
 {% endblock %}
 
 {% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
-  }) }}
-
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -22,8 +13,9 @@
     <div class="govuk-grid-column-two-thirds">
 
       <form class="form" id="mainForm" action="{{ nextUrl }}" method="post">
-        <h1 class="govuk-heading-l"> Applicant’s details</h1>
-        <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Name</h2>
+        <h1 class="govuk-heading-l"> Applicant's details</h1>
+        <div id="applicant-hint" class="govuk-hint govuk-!-padding-bottom-2">Enter farmer and farm business details</div>
+        <h2 class="govuk-heading-m">Name</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-firstname">
             First name
@@ -38,32 +30,30 @@
           <input class="govuk-input govuk-!-width-one-half" id="farmer-lastname" name="farmer-lastname" type="text" spellcheck="false" autocomplete="name" value="{{ data['farmer-lastname'] }}">
         </div>
 
-
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Contact details</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-email">
               Email address
               <div id="event-name-hint" class="govuk-hint">
-              {% if data['applicant'] === "Agent" %} We will only use this to send them confirmation
-                         {% else %}
-                         We will only use this to send you confirmation
-                         {% endif %}
+                  We will only use this to send you confirmation
               </div>
-
           </label>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-email" name="farmer-email" type="farmer-email" spellcheck="false" aria-describedby="farmer-email-hint" autocomplete="farmer-email" value="{{ data['farmer-email'] }}">
+        </div>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="confirm-farmer-email">
+              Confirm email address
+          </label>
+          <input class="govuk-input  govuk-!-width-two-thirds" id="confirm-farmer-email" name="confirm-farmer-email" type="confirm-farmer-email" spellcheck="false"  value="{{ data['confirm-farmer-email'] }}">
         </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-landline">
-              Mobile number
+              Mobile phone number
           </label>
-          <div id="mobile-name-hint" class="govuk-hint">
-            {% if data['applicant'] === "Agent" %} We will only use this to contact them about their application
-                       {% else %}
-                       We will only use this to contact you about your application
-                       {% endif %}
-            </div>
+          <div id="farmer-landline-hint" class="govuk-hint">
+              We will only use this to contact you about your application
+          </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-landline" name="farmer-landline" type="farmer-landline" spellcheck="false" aria-describedby="farmer-landline-hint" autocomplete="farmer-landline" value="{{ data['farmer-landline'] }}">
         </div>
 
@@ -71,11 +61,8 @@
           <label class="govuk-label" for="farmer-mobile">
               Landline number
           </label>
-          <div id="landline-name-hint" class="govuk-hint">
-            {% if data['applicant'] === "Agent" %} We will only use this to contact them about their application
-                       {% else %}
-                       We will only use this to contact you about your application
-                       {% endif %}
+          <div id="farmer-mobile-hint" class="govuk-hint">
+              We will only use this to contact you about your application
           </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-mobile" name="farmer-mobile" type="farmer-mobile" spellcheck="false" aria-describedby="farmer-mobile-hint" autocomplete="farmer-mobile" value="{{ data['farmer-mobile'] }}">
         </div>
@@ -90,14 +77,14 @@
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="farmer-address2">
-              Address line 2 (optional)
+                Address line 2 (optional)
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="farmer-address2" name="farmer-address2" type="farmer-address2" spellcheck="false" aria-describedby="farmer-address2-hint" autocomplete="farmer-address2" value="{{ data['farmer-address2'] }}">
         </div>
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="farmer-town">
-                Town or city
+                Town
             </label>
             <input class="govuk-input govuk-!-width-one-half" id="farmer-town" name="farmer-town" type="farmer-town" spellcheck="false" aria-describedby="farmer-town-hint" autocomplete="farmer-town" value="{{ data['farmer-town'] }}">
         </div>
@@ -109,7 +96,7 @@
             <input class="govuk-input govuk-!-width-one-half" id="farmer-county" name="farmer-county" type="farmer-county" spellcheck="false" aria-describedby="farmer-county-hint" autocomplete="farmer-county" value="{{ data['farmer-county'] }}">
         </div>
 
-        <div class="govuk-form-group">
+        <div class="govuk-form-group ">
             <label class="govuk-label" for="farmer-postcode">
                 Business postcode
             </label>
@@ -117,25 +104,16 @@
         </div>
 
         <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="project-postcode-hint">
-                <legend class="govuk-fieldset__legend">
-                  <h1 class="govuk-fieldset__heading">
-                    Project postcode
-                  </h1>
-                </legend>
-                <div id="contact-hint" class="govuk-hint">
-                  The site postcode where the work will happen
-                </div>
-
-            <input class="govuk-input govuk-!-width-one-quarter" id="project-postcode" name="project-postcode" type="project-postcode" spellcheck="false" aria-describedby="project-postcode-hint" autocomplete="project-postcode" value="{{ data['project-postcode'] }}">
-            </fieldset>
+            <label class="govuk-label" for="project-postcode">
+                Project postcode
+            </label>
+            <div id="project-postcode-hint" class="govuk-hint">
+                The site postcode where the work will happen
             </div>
+            <input class="govuk-input govuk-!-width-one-quarter" id="project-postcode" name="project-postcode" type="project-postcode" spellcheck="false" aria-describedby="project-postcode-hint" autocomplete="project-postcode" value="{{ data['project-postcode'] }}">
+        </div>
 
-
-
-
-
-        <button class="govuk-button govuk-!-margin-top-6 govuk-!-margin-right-1" data-module="govuk-button">
+        <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
 
