--- a/app/views/water/current/project-items.html
+++ b/app/views/water/current/project-items.html
@@ -60,12 +60,7 @@
                   Abstraction point including pump
                 </label>
               </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-6" name="project-items" type="checkbox" value="engineer fees" {{ checked("project-items", "engineer fees") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="project-items-6">
-                  Engineer fees (construction engineers only)
-                </label>
-              </div>
+
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="project-items-7" name="project-items" type="checkbox" value="fencing" {{ checked("project-items", "fencing") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-7">
@@ -157,13 +152,13 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="Technology-1" name="Technology" type="checkbox" value="computer software" {{ checked("Technology", "computer software") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="Technology-1">
-                  Software to monitor soil moisture levels and schedule irrigation
+                  Equipment to monitor soil moisture levels and schedule irrigation
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="Technology-2" name="Technology" type="checkbox" value="software and sensors" {{ checked("Technology", "software and sensors") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="Technology-2">
-                  Software and sensors to optimise water application
+                  Equipment such as sensors to optimise water application 
                 </label>
               </div>
             </div>
