GRANTS-1031, GRANTS-1032, GRANTS-1033, GRANTS-1195

--- a/app/views/ahw/current/tenancy-length.html
+++ b/app/views/ahw/current/tenancy-length.html
@@ -29,7 +29,7 @@
               </h1>
             </legend>
             <div id="tenancy-length-hint" class="govuk-hint">
-      The location of the slurry store
+      The location of the cattle housing
     </div>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
