--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -46,7 +46,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="Not yet applied" {{ checked("planning-permission", "Not yet applied") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Not yet applied for but expected to be in place by 31 December 2023</label>
+                  Not yet applied for but expected to be in place by 28 June 2024</label>
               </div>
             </div>
           </fieldset>
@@ -62,7 +62,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>Any planning permission must be in place by 31 December 2023. <br><br>You must have applied for planning permission before you submit a full application. 
+          <p>You must have secured planning permission before you submit a full application. 
 
           </p>
           <a href="#">
