--- a/app/views/ahw/current/planning-permission.html
+++ b/app/views/ahw/current/planning-permission.html
@@ -19,55 +19,61 @@
 {% block content %}
 
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                Does the project have planning permission?
-              </h1>
-            </legend>
-            <br>
-            <div class="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="Approved" {{ checked("planning-permission", "Approved") }}>
-                <label class="govuk-label govuk-radios__label" for="planning-permission">
-                  Approved
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="Applied" {{ checked("planning-permission", "Applied") }}>
-                <label class="govuk-label govuk-radios__label" for="planning-permission-2">
-                  Applied for but not yet approved
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="Not yet applied" {{ checked("planning-permission", "Not yet applied") }}>
-                <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Not yet applied for but expected to be in place by 31 December 2023</label>
-              </div>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <h1 class="govuk-fieldset__heading">
+              Does the project need planning permission?
+            </h1>
+          </legend>
+          <br>
+          <div class="govuk-radios">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="Not needed" {{ checked("planning-permission", "Not needed") }}>
+              <label class="govuk-label govuk-radios__label" for="planning-permission">
+                Not needed
+              </label>
             </div>
-          </fieldset>
-        </div>
-
-        <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
-
-      </form>
-    </div>
-    <div class="govuk-grid-column-one-third">
-
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
-          </h2>
-          <p>Any planning permission must be in place by 31 December 2023. <br><br>You must have applied for planning permission before you submit a full application. 
-
-          </p>
-          <a href="#">
-          </a>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="Secured" {{ checked("planning-permission", "Secured") }}>
+              <label class="govuk-label govuk-radios__label" for="planning-permission-2">
+                Secured
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="maybe" {{ checked("planning-permission", "maybe") }}>
+              <label class="govuk-label govuk-radios__label" for="planning-permission-3">
+                Should be in place by 31 January 2023
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="No" {{ checked("planning-permission", "No") }}>
+              <label class="govuk-label govuk-radios__label" for="planning-permission-3">
+                Will not be in place by 31 January 2023
+              </label>
+            </div>
+          </div>
+        </fieldset>
       </div>
+
+      <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+
+    </form>
+  </div>
+  <div class="govuk-grid-column-one-third">
+
+    <div class="app-step-nav-related app-step-nav-related--singular">
+      <h2 class="app-step-nav-related__heading">
+        <span class="app-step-nav-related__pretitle">Eligibility</span>
+        </h2>
+        <p>You must have secured planning permission before you submit a full application.<br><br>Any planning permission must be in place by 31 January 2023.
+        </p>
+        <a href="#">
+        </a>
     </div>
+  </div>
 
 {% endblock %}
