--- a/app/views/ahw/current/planning-required-condition.html
+++ b/app/views/ahw/current/planning-required-condition.html
@@ -22,13 +22,13 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body govuk-!-font-size-48">
         <h1 class="govuk-heading-l">
-          You may be able to apply for this scheme
+          You may be able to apply for a grant from this scheme
         </h1>
 
-        <p>Any planning permission must be in place by 31 December 2023.</p>
+        <p>Any planning permission must be in place by 31 January 2023 (the end of the application window).</p>
 
             <form class="form" action="{{ nextUrl }}" method="post">
-              <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
+              <button class="govuk-button" data-module="govuk-button">Continue</button>
             </form>
 
       </div>
