--- a/app/views/ahw/current/tenancy-length-condition.html
+++ b/app/views/ahw/current/tenancy-length-condition.html
@@ -20,7 +20,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="system-type" method="post">
+      <form id="mainForm" class="form" action="business" method="post">
       <h1 class="govuk-heading-l">
         You may be able to apply for a grant from this scheme
       </h1>
